.opsera-piyush-demo-1/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-piyush-demo-1-dev
  labels:
    app: piyush-demo-1
    tenant: opsera
    app.kubernetes.io/managed-by: argocd
