.opsera-piyush-demo-1/k8s/base/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  labels:
    app: result
    component: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
        component: result
    spec:
      serviceAccountName: piyush-demo-1-sa
      containers:
        - name: result
          image: result:placeholder
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
